remove Primitives, Ordering, Multimap